--- a/css/folhadeestilo.css
+++ b/css/folhadeestilo.css
@@ -1,18 +1,18 @@
 @charset "UTF-8";
+html{
+    background-color: darkslategrey
+}
 
 body {
-    width: 1000px;
+    width: 1030px;
     margin: auto;
     background-color: snow;
 }
 
 .nav {
-    width: 950px;
+    width: 945px;
     margin: auto;
-}
-
-.nav {
-    margin: -100px 0 80px 85px;
+    margin: -100px 0 90px 85px;
 }
 
 /* background-color- muda o fundo, list-style-type- tira aqueles pontinhos safados, padding- para dar espaçamento (aumentar o tamanho do nav e espacar as palavras)*/
@@ -26,6 +26,7 @@ body {
 .nav ul li {
     display: inline;
     position: relative;
+    padding-left: 5px;
 }
 
 /* color- cor das letras,text-decoration:none- tira aquele sublinhado safado,display:inline-block- lista separada em bloquinhos, padding- espacamento*/
