--- a/css/folhadeestilo.css
+++ b/css/folhadeestilo.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 html{
-    background-color: darkslategrey
+    background-color: #366273
 }
 
 body {
     width: 1030px;
     margin: auto;
-    background-color: snow;
+    background-color: #ffe9d5;
 }
 
 .nav {
@@ -17,7 +17,7 @@ body {
 
 /* background-color- muda o fundo, list-style-type- tira aqueles pontinhos safados, padding- para dar espaçamento (aumentar o tamanho do nav e espacar as palavras)*/
 .nav ul {
-    background-color: darkcyan;
+    background-color: #731D0A;
     list-style-type: none;
     padding: 15px 10px 15px;
 }
@@ -31,7 +31,7 @@ body {
 
 /* color- cor das letras,text-decoration:none- tira aquele sublinhado safado,display:inline-block- lista separada em bloquinhos, padding- espacamento*/
 .nav ul li a {
-    color: snow;
+    color: rgb(255, 250, 250);
     text-decoration: none;
     display: inline-block;
     padding: 10px;
@@ -57,12 +57,12 @@ body {
     display: block;
 }
 
+/*muda a cor do footer, o tamanho dele, o tamanho da letra e o espacamento*/
 .footer {
-    background-color: darkcyan;
-    bottom: 0;
+    background-color: #731D0A;
     width: 1000px;
     font-size: 11px;
-    padding: 0 15px 0 15px;
+    padding: 5px 15px 0 15px;
 }
 
 .footer ul {
@@ -92,35 +92,31 @@ p{
 h1{
     text-align: center;
 }
-.fontes a{
-color: gray;
-text-decoration: none;
+small a{
+    color:#ffe9d5 ;
+    text-decoration: none;
 }
-/*_______HOME_______*/
+/* __________HOME__________ */
 .articlehome{
-    width:450px;
-    margin-top: 200px;
+    width: 400px;
+    display: flex;
+    flex-flow: column;
+    padding: 30px;
+    align-items: center;
+    justify-content: flex-start;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    flex-direction: column
 }
 .articlehome p{
-    padding: 50px;
+    width: 400px;
 }
-
 .imghome{
-    margin-top: -300px;
-    margin-left: 500px;
-}
-/*_______ESTUDIOS_______*/
-.estudios{
-    width: 650px;
-}
-.img-estudios{
-
-    margin: -1500px 0 0 730px;
-    width:200px;
-
-}
-/*_______TRILHA SONORA_______*/
-.trilha{
-    width: 758px;
-    margin: 0 150px 80px 150px;
+    width:auto;
+    height: auto;
+    display: flex;
+    flex-flow: column-reverse;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
