--- a/css/folhadeestilo.css
+++ b/css/folhadeestilo.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Dosis:wght@700&family=Roboto+Slab:wght@300&display=swap');
+
 html{
-    background-color: #366273
+    background-color: #366273;
 }
 
 body {
@@ -13,6 +16,7 @@ body {
     width: 945px;
     margin: auto;
     margin: -100px 0 90px 85px;
+    font-family: 'Dosis', sans-serif;
 }
 
 /* background-color- muda o fundo, list-style-type- tira aqueles pontinhos safados, padding- para dar espaçamento (aumentar o tamanho do nav e espacar as palavras)*/
@@ -61,7 +65,7 @@ body {
 .footer {
     background-color: #731D0A;
     width: 1000px;
-    font-size: 11px;
+    color: aliceblue;
     padding: 5px 15px 0 15px;
 }
 
@@ -84,39 +88,188 @@ body {
 
 .redes-sociais {
     margin-left: 930px;
+    margin-inline-end: 0px;
+    margin-block: 0px;
 }
 /* todos os paragrafos vao ser justificados */
 p{
     text-align: justify;
+    font-family: 'Roboto Slab', serif;
 }
 h1{
     text-align: center;
+    font-size: 30px;
+    font-family: 'Bree Serif', serif;
+}
+.footer nav{
+    margin-block: -15px;
+}
+small{
+    font-size: 11px;
 }
 small a{
+    font-weight: 700;
     color:#ffe9d5 ;
     text-decoration: none;
 }
+
+.fontes a{
+    text-decoration: none;
+    color: lightgray;
+}
 /* __________HOME__________ */
+
 .articlehome{
-    width: 400px;
-    display: flex;
-    flex-flow: column;
-    padding: 30px;
-    align-items: center;
-    justify-content: flex-start;
-    align-content: flex-start;
-    flex-wrap: wrap;
-    flex-direction: column
+    display:flex; 
+    justify-content:center; 
+    align-items:center;
+    height: 350px;
 }
 .articlehome p{
-    width: 400px;
+    padding: 50px;
 }
-.imghome{
-    width:auto;
-    height: auto;
+.articlehome h1{
+    margin-block-end: -40px;
+}
+.imghome img{
+    padding-right: 50px;
+}
+
+/* _________EMISSORAS_________ */
+.emissoras{
     display: flex;
-    flex-flow: column-reverse;
+    align-items: flex-start;
+    height: 800px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+.emissora{
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.emissora h2{
+    text-align: center;
+}
+.emissora img{
+    justify-content: center;
+}
+.centralizado{
+    text-align: center;
+}
+/* _________ESTUDIOS_________ */
+.estudios{
+    padding-left: 20px;
+    display: flex;
+    width: 650px;
+    height: 3200px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.img-estudios{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+}
+.img-estudios img{
+    display: flex;
+}   
+
+/* _________DESENHOS_________ */
+.desenhos{
+    display: flex;
+    align-items: flex-start;
+    height: 2750px;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content: center;
+    align-content: flex-start;
+}
+
+.desenhos p{
+    width:300px;
+}
+.desenho{
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.desenhos h2{
+    text-align: center;
+    white-space: pre;
+}
+/* _________PROGRAMAS_________ */
+.programas{
+    display: flex;
+    align-items: flex-start;
+    height: 1000px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+}
+.programas p{
+    width: 300px;
+}
+.programa{
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.programa h2{
+    text-align: center;
+    white-space: pre;
+}
+/* _________CASTELO RA TIM BUM_________ */
+.cas-rtb{
+    display: flex;
+    align-items: flex-start;
+    height: 500px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+}
+.cas-rtb P{
+    width: 400px;
+    padding-left: 40px;
+}
+.cas-rtb-lado{
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.img-castelo img{
+  padding: 5px;
+}
+/* _________COCORICO_________ */
+.cocorico{
+    display: flex;
+    align-items: flex-start;
+    height: 500px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+}
+.cocorico p{
+    width: 400px;
+    padding-right: 40px;
+}
+.imgs-cocorico{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.img-cocorico img{
+    padding: 20px;
 }
