--- a/css/folhadeestilo.css
+++ b/css/folhadeestilo.css
@@ -1,24 +1,8 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Dosis:wght@700&family=Roboto+Slab:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Mochiy+Pop+P+One&family=Roboto+Slab:wght@300&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap');
 
-#botao_topo {
-    width: 50px;
-    height: 50px;
-    position: fixed;
-    right: 10px;
-    bottom: 10px;
-    z-index: 999;
-}
-
-body#home a#h,body#castelo a#crtb, body#cocorico a#cc, body#sitio-do-picapau-amarelo a#sdpa , body#contato a#ctt, body#curiosidades a#cs, body#desenhos a#d, body#emissoras a#em, body#estudios a#es, body#irmao-do-jorel a#idj, body#oswaldo a#o, body#turma-da-monica a#tdm, body#programas a#p, body#quem-somos a#qs, body#quiz a#q, body#trilha-sonora a#ts{
-    cursor: default;
-	background-color: #000;
-    color:white;
-    padding: 5px;
-}
 html {
     background-color: #366273;
 }
@@ -60,8 +44,8 @@ body {
 
 /* pra ter selecao */
 .nav ul li a:hover {
-    background-color: azure;
-    color: #731D0A;
+
+    color: #366273;
     padding: 10px;
     /* border-radius: 100% 100% 0 0; */
 }
@@ -90,7 +74,7 @@ body {
     font-family:sans-serif;
 }
 
-.footer section {
+.footer div {
     width:700px;
     display: flex;
     flex-wrap: wrap;
@@ -139,6 +123,11 @@ h2{
     font-family: 'Bree Serif', serif;
     font-size: 20px;
 }
+h3{
+    font-family: 'Bree Serif', serif;
+    font-size: 15px;
+    padding-right: 5px;
+}
 
 .footer nav {
     margin-block: -15px;
@@ -181,28 +170,25 @@ small a {
 }
 
 /* _________EMISSORAS_________ */
-.emissoras {
+.emissoras div{
     display: flex;
     align-items: flex-start;
-    height: 800px;
     flex-direction: row;
     flex-wrap: nowrap;
+    padding: 10px;
 }
 
-.emissora {
+.emissoras section {
     padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width:200px;
 }
 
 .emissora h2 {
     text-align: center;
-}
-
-.emissora img {
-    justify-content: center;
 }
 
 .centralizado {
@@ -211,29 +197,20 @@ small a {
 
 /* _________ESTUDIOS_________ */
 .estudios {
-    padding-left: 20px;
     display: flex;
-    width: 650px;
-    height: 2770px;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+    flex-direction: row;
+    align-items: center;
+    padding: 20px;
 }
-
 .estudios ul {
     font-family: 'Roboto Slab', serif;
 }
-
-.img-estudios {
-    position: absolute;
-    margin-top: 40px;
-    margin-left: 582px;
-
-}
-
-.img-estudios img {
+.estudios div{
     display: flex;
-    padding: 100px;
+    align-items: center;
+}
+.estudios img{
+    padding-left: 20px;
 }
 
 /* _________DESENHOS_________ */
@@ -274,32 +251,25 @@ small a {
     align-content: flex-start;
     flex-direction: row;
 }
-.irmao-jorel h1{
-    margin-block-start: 0;
-    margin-block-end: 0;
-}
 
 .irmao-jorel p {
     width: 550px;
     padding: 20px;
 }
 
-.irmao-jorel article{
+.irmao-jorel section{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: nowrap;
-    align-content: center;
+    flex-direction: row-reverse;
+    align-items: center; 
 }
-.irmao-jorel aside{
+.irmao-jorel div{
     display: flex;
-    align-content: flex-start;
+    justify-content: space-between;
+    flex-wrap: nowrap;
     flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: flex-start;
+    align-items: center
 }
-
-.irmao-jorel img {
+.irmao-jorel img{
     padding: 15px;
 }
 
