--- a/css/folhadeestilo.css
+++ b/css/folhadeestilo.css
@@ -13,11 +13,13 @@ body {
     background-color: #ffe9d5;
     box-shadow: 0px 0px 3px black;
 }
-
+.body{
+    padding-top: 80px;
+}
 .nav {
-    width: 945px;
-    margin: auto;
-    margin: -90px 0 60px 85px;
+    position: fixed;
+    display: flex;
+    align-items: center;
     font-family: 'Roboto Slab';
     font-size: 12px;
     font-weight: 500;
@@ -28,7 +30,7 @@ body {
 .nav ul {
     background-color: #731D0A;
     list-style-type: none;
-    padding: 15px 10px 11px;
+    padding: 10px;
 }
 
 /*display:inline- colocar lado a lado as listas, position:relative- para a lista avulsa ficar debaixo do item principal*/
@@ -127,14 +129,11 @@ small a {
 .fontes a {
     text-decoration: none;
     color: gray;
-    /* padding-left: 15px; */
+    padding: 10px;
     font-family: 'Roboto Slab';
 }
 
 .fontes {
-    margin: auto;
-
-    padding-left: 50px;
     margin-block-start: -12px;
     color: gray;
     padding-bottom: 10px;
